--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 annotated-types==0.7.0
 anyio==4.9.0
 black==25.1.0
+certifi==2025.4.26
 click==8.2.1
 fastapi==0.115.12
 greenlet==3.2.2
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+pluggy==1.6.0
 pydantic==2.11.4
 pydantic_core==2.33.2
+pytest==8.3.5
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
