--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pluggy==1.6.0
 pydantic==2.11.4
 pydantic_core==2.33.2
 pytest==8.3.5
+python-i18n==0.3.9
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
