--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,37 +1,53 @@
-name: CI (FastAPI)
+name: CI
 
 on:
   push:
-    branches: ["main"]
+    branches: [ main ]
   pull_request:
-    branches: ["main"]
+    branches: [ main ]
 
 jobs:
-  test-and-lint:
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+
     steps:
-      # 1. Checkout code
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # 2. Set up Python
-      - name: Set up Python 3.12.3
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12.3"
-
-      # 3. Install dependencies
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-          pip install black pytest
-
-      # 4. Lint with Black (fail if files need formatting)
-      - name: Lint with Black
-        run: |
-          black --check .
-
-      # 5. Run tests
-      - name: Run tests
-        run: |
-          pytest tests/
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pytest pytest-cov black flake8 mypy isort
+    
+    - name: Check formatting with Black
+      run: black --check .
+    
+    - name: Check imports with isort
+      run: isort --check-only --diff .
+    
+    - name: Lint with flake8
+      run: flake8 .
+    
+    - name: Type checking with mypy
+      run: mypy app/
+    
+    - name: Run tests with coverage
+      run: |
+        pytest --cov=app --cov-report=xml
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
