--- a/mypy.ini
+++ b/mypy.ini
@@ -16,3 +16,8 @@ warn_unreachable = True
 init_forbid_extra = True
 init_typed = True
 warn_required_dynamic_aliases = True 
+[mypy-pydantic_settings]
+ignore_missing_imports = True
+[mypy-i18n]
+ignore_missing_imports = True
+exclude = site-packages
