--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,14 @@ jobs:
       run: flake8 .
     
     
-    - name: Run tests with coverage
-      run: |
-        pytest --cov=app --cov-report=xml
+   # - name: Run tests with coverage
+    #  run: |
+     #   pytest --cov=app --cov-report=xml
     
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./coverage.xml
-        fail_ci_if_error: true
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+  #  - name: Upload coverage to Codecov
+  #    uses: codecov/codecov-action@v4
+  #    with:
+   #     file: ./coverage.xml
+   #     fail_ci_if_error: true
+   #   env:
+   #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
