--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
-black==25.1.0
 certifi==2025.4.26
 click==8.2.1
 fastapi==0.115.12
@@ -19,9 +18,11 @@ pluggy==1.6.0
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
-pytest==8.3.5
+Pygments==2.19.1
+pytest==8.4.0
 python-dotenv==1.1.0
 python-i18n==0.3.9
+ruff==0.11.12
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
