--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: SkillBridge CI
 
 on:
   push:
@@ -7,12 +7,35 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.11"
+        cache: 'pip'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ruff
+    
+    - name: Check formatting and lint with Ruff
+      run: |
+        # Check formatting
+        ruff format --check .
+        # Run linting
+        ruff check .
+
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.10", "3.11"]
-
+    
     steps:
     - uses: actions/checkout@v4
     
@@ -26,36 +49,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov black flake8 mypy isort
+        pip install pytest pytest-cov
     
-    - name: Check formatting with Black
-      run: black --check .
+    - name: Run tests with coverage
+      run: |
+        pytest --cov=app --cov-report=xml
     
-    - name: Check imports with isort
-      run: isort --check-only --diff .
-    
-    - name: Lint with flake8
-      run: flake8 .
-    
-    #- name: Run all pre-commit hooks
-    #  run: pre-commit run --all-files
-    
-   # - name: Run tests with coverage
-   #   run: pytest --cov=app
-    
-   # - name: Format code
-   #   run: black .
-    
-   # - name: Sort imports
-   #   run: isort .
-    
-    #- name: Type checking
-    #  run: mypy app/
-    
-    # - name: Upload coverage to Codecov
-    #   uses: codecov/codecov-action@v4
-    #   with:
-    #     file: ./coverage.xml
-    #     fail_ci_if_error: true
-    #   env:
-    #     CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        file: ./coverage.xml
+        fail_ci_if_error: true
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
