--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ anyio==4.9.0
 asyncpg==0.30.0
 certifi==2025.4.26
 click==8.2.1
+coverage==7.8.2
+ecdsa==0.19.1
 fastapi==0.115.12
 greenlet==3.2.2
 h11==0.16.0
@@ -10,19 +12,27 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
+loguru==0.7.2
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
 pytest==8.4.0
+pytest-cov==6.1.1
 python-dotenv==1.1.0
 python-i18n==0.3.9
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
 ruff==0.11.12
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
