--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-# Python
+.env
+env/
+# Created by .ignore support plugin (hsz.mobi)
+### Python template
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -19,59 +27,84 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
-# Virtual Environment
-venv/
-env/
-ENV/
-.env
-.venv
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
-# IDE specific files
-.idea/
-.vscode/
-*.swp
-*.swo
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Testing
-.coverage
+# Unit test / coverage reports
 htmlcov/
 .tox/
-.nox/
+.coverage
 .coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
 .hypothesis/
 .pytest_cache/
-cover/
 
-# Logs
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
 *.log
-logs/
-log/
+local_settings.py
+db.sqlite3
 
-# Database
-*.sqlite3
-*.db
+# Flask stuff:
+instance/
+.webassets-cache
 
-# Docker
-.docker/
-docker-compose.override.yml
+# Scrapy stuff:
+.scrapy
 
-# FastAPI specific
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
 .env
-.env.prod
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
-# System Files
-.DS_Store
-Thumbs.db
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+.idea/*
