--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,36 @@
 annotated-types==0.7.0
 anyio==4.9.0
 asyncpg==0.30.0
-certifi==2025.4.26
+Authlib==1.6.0
+certifi==2025.6.15
+cffi==1.17.1
 click==8.2.1
+cryptography==45.0.4
+ecdsa==0.19.1
 fastapi==0.115.12
-greenlet==3.2.2
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-iniconfig==2.1.0
-mypy_extensions==1.1.0
-packaging==25.0
-pathspec==0.12.1
-platformdirs==4.3.8
-pluggy==1.6.0
-pydantic==2.11.4
+itsdangerous==2.2.0
+loguru==0.7.3
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
-Pygments==2.19.1
-pytest==8.4.0
 python-dotenv==1.1.0
-python-i18n==0.3.9
-ruff==0.11.12
+python-jose==3.5.0
+python-multipart==0.0.20
+rsa==4.9.1
+ruff==0.11.13
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 sqlmodel==0.0.24
 starlette==0.46.2
 typing-inspection==0.4.1
-typing_extensions==4.13.2
-uvicorn==0.34.2
+typing_extensions==4.14.0
+uvicorn==0.34.3
